--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
   </mat-card>
 
   <mat-card>
-    <mat-card-title>Codemirror: CSS</mat-card-title>
+    <mat-card-title>Codemirror: YAML</mat-card-title>
     <mat-card-content fxLayout="column">
       <mat-form-field>
         <mat-codemirror formControlName="yaml"
