--- a/src/app/mat-codemirror/mat-codemirror.component.html
+++ b/src/app/mat-codemirror/mat-codemirror.component.html
@@ -1,7 +1,7 @@
 <textarea
   [name]="name"
   class="ngx-codemirror {{ className }}"
-  [class.ngx-codemirror--focused]="isFocused"
+  [class.ngx-codemirror--focused]="focused"
   autocomplete="off"
   [autofocus]="autoFocus"
   #ref>
