fix issue where values won't reseet when using the component in angular form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,4 +42,7 @@
       </mat-form-field>
     </mat-card-content>
   </mat-card>
+
+  <button mat-raised-button (click)="onResetClick(this)" style="width: 100px; height: 50px;">        <span [innerHTML]="Reset" >Rest</span>
+  </button>
 </div>
