--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,7 @@
     </mat-card-content>
   </mat-card>
 
-  <button mat-raised-button (click)="onResetClick(this)" style="width: 100px; height: 50px;">        <span [innerHTML]="Reset" >Rest</span>
+  <button mat-raised-button (click)="onResetClick(this)" style="width: 100px; height: 50px;">        
+    <span>Reset</span>
   </button>
 </div>
